--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
 anyio==4.9.0
+boto3==1.39.4
+botocore==1.39.4
 certifi==2025.7.9
 click==8.2.1
 dnspython==2.7.0
@@ -13,20 +15,24 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+jmespath==1.0.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.8
 rignore==0.5.1
+s3transfer==0.13.0
 sentry-sdk==2.32.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
 typer==0.16.0
